# Springform-Deformation

./: .gitignore  Makefile.am  README  configure.ac
data/: 57chevy.coor  57chevy.poly
project/: Makefile  Makefile.am  SFDWin.cpp  SFDWin.hpp  gui.fl  main.cpp  physics.cpp  physics.hpp
project/html/: foo.css  index.html
shared/: FFD.cpp  FFD.hpp  glMatrix.cpp  glMatrix.hpp  interpolation.hpp  quad.cpp  quad.hpp  triple.cpp  triple.hpp
