AC_PREREQ([2.67])
AC_INIT([SpringfomDeformation],[1.0],[ajrich@earthlink.net])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_CONFIG_HEADERS([config.h])
# Checks for programs.
AC_PROG_CXX
# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_INLINE
AC_TYPE_SIZE_T
# Checks for library functions.
AC_CHECK_FUNCS([pow sqrt])


AC_CONFIG_FILES([
	Makefile
	project/Makefile
])
AC_OUTPUT
